[package]
name = "pwt"
version = "0.8.0"
edition = "2024"
authors = ["Tom Grushka <tom@dra11y.com>", "andreasewering"]
license = "	BSD-3-Clause"
description = "Create, verify and decode protobuf web tokens - with protobuf instead of prost"
homepage = "https://github.com/dra11y/pwt"
documentation = "https://github.com/dra11y/pwt"
repository = "https://github.com/dra11y/pwt"
readme = "README.md"
keywords = ["protobuf", "web", "token"]
categories = ["authentication", "encoding"]
include = ["pwt.proto"]

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2.1.1", features = ["pem"] }
protobuf = "3.7.2"                                        # 4.32.0 is broken!!

[build-dependencies]
protobuf-codegen = "3.7.2" # 4.32.0 is broken!!

[dev-dependencies]
protobuf-codegen = "3.7.2"                                   # 4.32.0 is broken!!
criterion = { version = "0.5", features = ["html_reports"] }
josekit = "0.10.0"
serde = "1"
serde_json = "1"
rand = "0.9"

[[bench]]
name = "pwt_vs_jwt"
harness = false
